and keep track of all category-tags.
It DOES NOT substitute the  SVN log-message one should put at every
committal in the SVN repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

October 20, 2014 I. Hrivnacova (analysis-V10-00-33)
- Updated to g4tools 1.16.0 (by G. Barrand)
  Write/read ntuple with std::string columns,
  see History_tools for complete list of modifications.
- Implemented reading H3 for Root (now supported in tools)
- Added functions for handling ntuple columns of std::string type
- Added an option to write the Hippo header in csv ntuple output
  (default true)

October 13, 2014 I. Hrivnacova (analysis-V10-00-32)
- Fixed variable initialization in G4CsvAnalysisReader

October 13, 2014 I. Hrivnacova (analysis-V10-00-31)
- Do not include G4CsvRNtupleManager, which is not yet commited.

October 07, 2014 I. Hrivnacova (analysis-V10-00-30)
- Implemented G4CsvAnalysisReader: reading all histograms and profiles;
  ntuples noy yet done
- Updated to g4tools 1.15.2 (by G. Barrand)
  Fixed reading csv histograms and profiles (rcsv_histo) 

September 30, 2014 I. Hrivnacova (analysis-V10-00-29)
- Updated to g4tools 1.15.1 (by G. Barrand)
  Fixed reading histograms with titles of more words;
  see History_tools for complete list of modifications.

September 30, 2014 I. Hrivnacova (analysis-V10-00-28)
- Updated to g4tools 1.15.0 (by G. Barrand)
  See History_tools for complete list of modifications.

September 18, 2014 I. Hrivnacova (analysis-V10-00-27)
- Fixed units in /analysis/[h|p]n/create and /analysis/[h|p]n/set
  commands

September 12, 2014 G. Cosmo (analysis-V10-00-26)
- Fixed xml/GNUmakefile to add missing dependency on expat, to
  cover cases when internal expat is used or for WIN32 builds.

September 12, 2014 I. Hrivnacova (analysis-V10-00-25)
- Fixes in XML reader: