@@ -84,6 +84,56 @@ public:
     return true;
   }
   
+  bool set_bin_content(bn_t a_ibin,bn_t a_jbin,
+                       TN a_entries,TW a_Sw,TW a_Sw2,
+                       TC a_Sxw,TC a_Sx2w,TC a_Syw,TC a_Sy2w) {
+    if(parent::m_dimension!=2) return false;
+    if(a_ibin>(parent::m_axes[0].m_number_of_bins+1)) return false;
+    if(a_jbin>(parent::m_axes[1].m_number_of_bins+1)) return false;
+
+    bool inRange = true;
+    if(a_ibin==0) inRange = false;
+    else if(a_ibin==(parent::m_axes[0].m_number_of_bins+1)) inRange = false;
+    if(a_jbin==0) inRange = false;
+    else if(a_jbin==(parent::m_axes[1].m_number_of_bins+1)) inRange = false;
+
+    TO offset = a_ibin + a_jbin * parent::m_axes[1].m_offset;
+
+    parent::m_all_entries -= parent::m_bin_entries[offset];
+    if(inRange) {
+      parent::m_in_range_entries -= parent::m_bin_entries[offset];
+      parent::m_in_range_Sw -= parent::m_bin_Sw[offset];
+      parent::m_in_range_Sw2 -= parent::m_bin_Sw2[offset];
+      parent::m_in_range_Sxw[0] -= parent::m_bin_Sxw[offset][0];
+      parent::m_in_range_Sx2w[0] -= parent::m_bin_Sx2w[offset][0];
+      parent::m_in_range_Sxw[1] -= parent::m_bin_Sxw[offset][1];
+      parent::m_in_range_Sx2w[1] -= parent::m_bin_Sx2w[offset][1];
+    }
+
+    parent::m_bin_entries[offset] = a_entries;
+    parent::m_bin_Sw[offset] = a_Sw;
+    parent::m_bin_Sw2[offset] = a_Sw2;
+
+    parent::m_bin_Sxw[offset][0] = a_Sxw;
+    parent::m_bin_Sx2w[offset][0] = a_Sx2w;
+    parent::m_bin_Sxw[offset][1] = a_Syw;
+    parent::m_bin_Sx2w[offset][1] = a_Sy2w;
+
+    parent::m_all_entries += a_entries;
+    if(inRange) {
+      parent::m_in_range_entries += a_entries;
+      parent::m_in_range_Sw += a_Sw;
+      parent::m_in_range_Sw2 += a_Sw2;
+
+      parent::m_in_range_Sxw[0] += a_Sxw;
+      parent::m_in_range_Sx2w[0] += a_Sx2w;
+      parent::m_in_range_Sxw[1] += a_Syw;
+      parent::m_in_range_Sx2w[1] += a_Sy2w;
+    }
+
+    return true;
+  }
+
   bool add(const h2& a_histo){
     parent::base_add(a_histo);
     return true;
